--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -33,15 +33,15 @@ default.home.label=Principal
 default.list.label={0} Lista
 default.add.label=Agregar {0}
 default.new.label=Nuevo {0}
-default.create.label=Crear {0}
+default.create.label=Cargar configuración
 default.show.label=Mostar {0}
 default.edit.label=Editar {0}
 
-default.button.create.label=Crear
+default.button.create.label=Cargar configuración
 default.button.edit.label=Editar
 default.button.update.label=Actualizar
 default.button.delete.label=Eliminar
-default.button.delete.confirm.message=¿Está usted seguro?
+default.button.delete.confirm.message=Al editar la configuración se eliminaran los datos actuales ¿Desea continuar?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=La propiedad {0} debe ser una URL válida
