--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -42,6 +42,8 @@ default.button.edit.label=Editar
 default.button.update.label=Actualizar
 default.button.delete.label=Eliminar
 default.button.delete.confirm.message=Al editar la configuración se eliminaran los datos actuales ¿Desea continuar?
+configuracion.list.datos=Datos actualmente registrados
+configuracion.list.calcular=Calcular un nuevo registro
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=La propiedad {0} debe ser una URL válida
